# libre-clap.template

./: .editorconfig  CMakeLists.txt  README.md
sh/: fetch-clap-header.cmd
